--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 <link rel="stylesheet" type="text/css" href="./css/reset.css">
 <link rel="stylesheet" type="text/css" href="./css/style.css">
+<link rel="stylesheet" type="text/css" href="./css/styleT.css">
+<link rel="stylesheet" type="text/css" href="./css/styleM.css">
 
 <body>
     <div id="wrap">
@@ -228,7 +230,7 @@
                         <img src="./images/main2.png" alt="">
                     </div>
                 </li>
-                <li class="fade3">
+                 <li class="fade3">
                     <div class="fade_left">
                         <p>의자 위 인생은<br>진행중</p>
                         <h1>SIDIZ</h1>
@@ -368,11 +370,11 @@
                     <span>@sidiz_official</span>
                 </div>
                 <ul>
-                    <li><img src="https://scontent-nrt1-1.cdninstagram.com/v/t51.29350-15/312743581_1463465197467067_7376705282581745504_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=8ae9d6&_nc_ohc=G4zxWZ_NKLAAX-61UTS&_nc_ht=scontent-nrt1-1.cdninstagram.com&edm=ANo9K5cEAAAA&oh=00_AfABGxenxgxWMiBpHR2pHskUfaeOhDDBZMOtCw5DN4PjYQ&oe=6366537C" alt=""></li>
-                    <li><img src="https://scontent-nrt1-1.cdninstagram.com/v/t51.29350-15/309655374_1241727116397672_1474161750820685130_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=8ae9d6&_nc_ohc=9B0UzAHl5yEAX877asE&_nc_ht=scontent-nrt1-1.cdninstagram.com&edm=ANo9K5cEAAAA&oh=00_AfCp3Yx93GZFB4KV1Y4zH5XJw5Z4_XuRw2xcbWSef-N77w&oe=6366E898" alt=""></li>
-                    <li><img src="https://scontent-nrt1-1.cdninstagram.com/v/t51.29350-15/311889182_5472191692816225_3541240508073791297_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=8ae9d6&_nc_ohc=ZtwHHRfOeY0AX8njCs5&_nc_ht=scontent-nrt1-1.cdninstagram.com&edm=ANo9K5cEAAAA&oh=00_AfC20LxUyJMZyTZRScV0T_55qsYlSrD0lwnQxeOIvtHUOg&oe=63676C56" alt=""></li>
-                    <li><img src="https://scontent-nrt1-1.cdninstagram.com/v/t51.29350-15/311773541_1112571936069561_6664109024368699153_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=8ae9d6&_nc_ohc=cvvZ2I8c-ssAX_vHQyP&_nc_ht=scontent-nrt1-1.cdninstagram.com&edm=ANo9K5cEAAAA&oh=00_AfAESMHMyo4hFHZGLYIWLqRLIfUHasbXbqq01A6e_kxPkg&oe=63674490" alt=""></li>
-                    <li><img src="https://scontent-nrt1-1.cdninstagram.com/v/t51.29350-15/309043345_941483856829396_1268254465442825166_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=8ae9d6&_nc_ohc=WAbpZ1Uh5G8AX-exsM_&_nc_ht=scontent-nrt1-1.cdninstagram.com&edm=ANo9K5cEAAAA&oh=00_AfC198kXbk8QtBdUoByABITJ5D1XRTBsNfHaxES2MSrsvQ&oe=63672D59" alt=""></li>
+                    <li><img src="https://scontent-nrt1-1.cdninstagram.com/v/t51.29350-15/314743528_5323374394440034_1663634038884193660_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=8ae9d6&_nc_ohc=SegZGAsYfNwAX_pbDBI&_nc_ht=scontent-nrt1-1.cdninstagram.com&edm=ANo9K5cEAAAA&oh=00_AfDFiPOWq9_CJPKqNo2_EyAJ2BpDnzPnl9SHTk9P8NvZmA&oe=63711E9E" alt=""></li>
+                    <li><img src="https://scontent-nrt1-1.cdninstagram.com/v/t51.29350-15/314731311_826334991745239_5909199677550752039_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=8ae9d6&_nc_ohc=IA4duDaSRAQAX-Vzr6Y&_nc_ht=scontent-nrt1-1.cdninstagram.com&edm=ANo9K5cEAAAA&oh=00_AfBcQBuN2nlZESmxafVQeNZ5plhetUzO0IMGj1WfxEWgBg&oe=6370EB48" alt=""></li>
+                    <li><img src="https://scontent-nrt1-1.cdninstagram.com/v/t51.29350-15/312743581_1463465197467067_7376705282581745504_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=8ae9d6&_nc_ohc=AT_d0i4zjp4AX8a97go&_nc_ht=scontent-nrt1-1.cdninstagram.com&edm=ANo9K5cEAAAA&oh=00_AfDjiSBFfoVvhurT2RLh0G6Ho6PoS5j1MTnwKHoeCwhC2w&oe=637036BC" alt=""></li>
+                    <li><img src="https://scontent-nrt1-1.cdninstagram.com/v/t51.29350-15/309655374_1241727116397672_1474161750820685130_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=8ae9d6&_nc_ohc=OaEdvEteu9cAX89Cgbp&_nc_ht=scontent-nrt1-1.cdninstagram.com&edm=ANo9K5cEAAAA&oh=00_AfAC5s2TkX0Oc6zzTF6LbbZW-GwPdQdDkxUADP-HAX6J6w&oe=6370CBD8" alt=""></li>
+                    <li><img src="https://scontent-nrt1-1.cdninstagram.com/v/t51.29350-15/311889182_5472191692816225_3541240508073791297_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=8ae9d6&_nc_ohc=DoWEBWqHqXYAX_qSaXC&_nc_ht=scontent-nrt1-1.cdninstagram.com&edm=ANo9K5cEAAAA&oh=00_AfCjxEIFbM0LuPShIOeFUmmEfGv6KNgB7J3beHQrCyjWHA&oe=63714F96" alt=""></li>
                 </ul>
             </div>
             <div class="blog">
